<resources>
    <string name="app_name">MyHealth</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to MyHealth!"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password is too short</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="medical">Medical</string>
    <string name="lifestyle">lifestyle</string>
    <string name="profile">Profile</string>
    <string name="female">Female</string>
    <string name="add_workout">Add Workout</string>
    <string name="view_past_workouts">View Past Workouts</string>
    <string name="clinic_locator">Clinic Locator</string>
    <string name="clinic_near_current_location">Clinic near current location</string>
    <string name="clinic_near_current_location">Clinic near current location</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="know_allergies_n_t_amoxicillin_n_t_penicillin">Know Allergies: \t Amoxicillin \t Penicillin</string>
    <string name="primary_pharmacy_n_t_cvs_pine_view_drive">Primary Pharmacy: \t CVS Pine View Drive</string>
    <string name="insurance_provider_n_t_blue_cross_blue_shield_n_t_304_123_4566">Insurance Provider:  \t Blue Cross Blue Shield \t 304-123-4566</string>
    <string name="test_results">Test Results</string>
    <string name="female">Female</string>
    <string name="_20_y_o">20 y.o</string>
    <string name="_09_29_1999">09/29/1999</string>
    <string name="_5_6_quot">5\' 6\"</string>
    <string name="my_test_results">My Test Results</string>
    <string name="clinics_near_current_location_26501">Clinics Near Current Location: 26501</string>
    <string name="clinics_near_current_location_26501">Clinics Near Current Location: 26501</string>
    <string name="wvu_medicine_student_health">WVU Medicine Student Health</string>
    <string name="wvu_medicine_pain_management_center">WVU Medicine Pain Management Center</string>
    <string name="todo">TODO</string>
    <string name="list_of_clinics_near_you">List of Clinics Near You:</string>
    <string name="family_vision_clinic">Family Vision CLinic</string>
    <string name="women_s_healthcare_of_morgantown">Women\'s Healthcare of Morgantown</string>
    <string name="family_vision_office">Family Vision Office</string>
    <string name="basic_metabolic_panel">Basic Metabolic Panel</string>
    <string name="_10_12_2019">10/12/2019</string>
    <string name="kate_l_smith_md">Kate L Smith, MD</string>

</resources>
